--- a/footer.html
+++ b/footer.html
@@ -4,18 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    
+      <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
     <!-- style -->
     <link rel="stylesheet" href="footer.css">
-
     <title>footer</title>
 </head>
 <body>
-
-
-
+ <!-- Footer -->
+ <footer>
+     <div class="row">
+        <section id="lab_social_icon_footer">
+            <!-- Include Font Awesome Stylesheet in Header -->
+            <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+            <div class="container">
+                    <div class="text-center center-block">
+                            <a href="#"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
+                            <a href="#"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
+                            <!-- <a href="#"><i id="social-in" class="fa fa-instagram-square fa-3x social"></i></a> -->
+                            <a href="#"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
+                </div>
+            </div>
+        </section>
+            <div class="copyright">
+               <p style="text-align: center"> Copyright &copy; 2021-<script>document.write(new Date().getFullYear())</script> Ariana Horn All Rights Reserved</p>
+             </div>
+     </div>
+  </footer>
 <script src="footer.js"></script> 
 </body>
 </html>
