--- a/footer.html
+++ b/footer.html
@@ -18,7 +18,7 @@
 </head>
 <body>
  <!-- Footer -->
- <footer>
+<div class="footer">
      <div class="row">
         <section id="lab_social_icon_footer">
             <!-- Include Font Awesome Stylesheet in Header -->
@@ -36,7 +36,13 @@
                <p style="text-align: center"> Copyright &copy; 2021-<script>document.write(new Date().getFullYear())</script> Ariana Horn All Rights Reserved</p>
              </div>
      </div>
-  </footer>
+</div>
+
 <script src="footer.js"></script> 
+<script
+src="https://code.jquery.com/jquery-3.3.1.js"
+integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+crossorigin="anonymous">
+</script> 
 </body>
 </html>
