--- a/header.html
+++ b/header.html
@@ -13,24 +13,31 @@
 </head>
 
 <body>
+<div class="header">  
   <nav>
     <div class="logo">
-      <img src="logo/LOGOSAH.png" style="width: 80%; margin-top: 15px;"></div>
-    <ul class="nav-links">
-      <li><a href="#">HOME</a></li>
-      <li><a href="#">ABOUT</a></li>
-      <li><a href="#">PORTFOLIO</a></li>
-      <li><a href="#">CONTACT</a></li>
-    </ul>
-    <div class="burger">
+        <img src="logo/LOGOSAH.png" style="width: 80%; margin-top: 15px;"></div>
+      <ul class="nav-links">
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">PORTFOLIO</a></li>
+        <li><a href="#">CONTACT</a></li>
+     </ul>
+     <div class="burger">
       <div class="line1"></div>
       <div class="line2"></div>
       <div class="line3"></div>
-    </div>
+     </div>
   </nav>
-  <script src="header.js"></script>
+  </div>  
+</div>
+<script src="header.js"></script>
+<script
+src="https://code.jquery.com/jquery-3.3.1.js"
+integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+crossorigin="anonymous">
+</script> 
 </body>
-
 </html>
 
 <!--    <nav>        
