--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homepage</title>
-</head>
-<body>
-    
-</body>
+  </head> 
+
+  <body> 
+     <div id="header"></div>
+     <div id="footer"></div>
+  </body> 
+  <script> 
+  $(function(){
+    $("#header").load("header.html"); 
+    $("#footer").load("footer.html");
+  });
+  </script>   
 </html>
