--- a/footer.html
+++ b/footer.html
@@ -15,6 +15,8 @@
     <!-- style -->
     <link rel="stylesheet" href="footer.css">
     <title>footer</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
 </head>
 <body>
  <!-- Footer -->
