--- a/header.html
+++ b/header.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="header.css">
   <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
   <title>header</title>
 </head>
@@ -32,20 +33,10 @@
   </div>  
 </div>
 <script src="header.js"></script>
+</body>
 <script
 src="https://code.jquery.com/jquery-3.3.1.js"
 integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
 crossorigin="anonymous">
 </script> 
-</body>
 </html>
-
-<!--    <nav>        
-        <ul class="nav-links">
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">STORE</a></li>
-            <div class="logo">Jawdropper</div>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">CONTACT</a></li>
-        </ul>
-    </nav>-->
