--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homepage</title>
+    <title>main</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   </head> 
 
   <body> 
      <div id="header"></div>
      <div id="footer"></div>
-  </body> 
-  <script> 
-  $(function(){
-    $("#header").load("header.html"); 
-    $("#footer").load("footer.html");
-  });
-  </script>   
-  
+
+<script> 
+      $(function(){
+        $("#header").load("header.html"); 
+        $("#footer").load("footer.html");
+      });
+      </script>      
+  </body>  
 </html>
