--- a/homepage.html
+++ b/homepage.html
@@ -15,13 +15,13 @@
             <h1>Hi, there! Glad you landed on my portfolio.
                 I am Ariana Horn.
             </h1>
-            <p style="color: darkolivegreen;">UX UI designer</p>
+            <p style="color: darkolivegreen; text-align: left;">UX UI designer</p>
         </div>
         <div class="col-6 col-md-4"></div>
       </div>    
       <div class="row">
         <div class="col-12 col-md-8">
-            <p>wejlefr edfjkejkfn ie ie oe ov oes lsdvov slv oe dvlks lvsdenv ksnovj dklv msknvosdnv ksvlsd vlsdnvlsdjovklsv ldv </p>
+            <p>Innovative junior experiece researcher, user interface designer and visual designer, passionated about catching on cultural difference needs and trying to satisfy those needs with appealing customized designs for applications/websites. </p>
         </div>
         <div class="col-6 col-md-4">
             <img class="profilepic" src="Images/profilepic.jpeg" width="80%" alt="profilepic">
@@ -43,7 +43,7 @@
         
               <div class="row content">
                 <div class="portfolio col-md-12">
-                  <h1>PORTFOLIO</h1>
+                  <h2>PORTFOLIO</h2>
                 </div>
               </div>  
 
