--- a/homepage.html
+++ b/homepage.html
@@ -12,10 +12,10 @@
 <body>
     <div class="row">
         <div class="col-12 col-md-8" style="text-align: center;">
-            <h1>Hi, there! Glad you landed on my portfolio.
-                I am Ariana Horn.
+            <h1>Hi, there! Welcome to my portfolio.
+               <br> I am Ariana Horn.
             </h1>
-            <p style="color: darkolivegreen; text-align: left;">UX UI designer</p>
+            <p style="color: darkolivegreen; text-align: left; padding: 10px;"> - UX UI designer</p>
         </div>
         <div class="col-6 col-md-4"></div>
       </div>    
@@ -24,29 +24,66 @@
             <p>Innovative junior experiece researcher, user interface designer and visual designer, passionated about catching on cultural difference needs and trying to satisfy those needs with appealing customized designs for applications/websites. </p>
         </div>
         <div class="col-6 col-md-4">
-            <img class="profilepic" src="Images/profilepic.jpeg" width="80%" alt="profilepic">
+            <img class="profilepic" src="Images/me.jpeg" alt="profilepic">
         </div>
       </div> 
-    <!-- <div class="row">  
-        <div class="col-md-10 col-md-offset-1"> 
-              <div class="profile row">
-                <div class="col-md-8">
-                  <h1 class="lead margin">Hi there! I am Ariana Horn.</h1>
-                  <p style="color:#FF0000";>UX UI designer</p>
-                </div>
-                <div class="col-md-4">
-                  <img src="#" alt="profilePicture">
-              </div>
-              <div class="col-md-8">
-                <p>UX UI designer</p>
-              </div> -->
-        
-              <div class="row content">
-                <div class="portfolio col-md-12">
-                  <h2>PORTFOLIO</h2>
-                </div>
-              </div>  
+ <!-- skills -->
 
+ <div class="row-container">
+    <div class="flex-container">
+      <div class="uxuilogo"><strong>UX/UI DESIGN</strong>
+        <br>
+      <img src="Images/uxui.png" width="60%" alt="">
+    </div>
+      <div class="creativethinking">
+        <img src="Images/creative.png" width="60%"><br>
+        <strong>CREATIVE THINKING</strong>
+      </div>
+      <div class="sketchlogo"><strong>SKETCHING & LOGO DESIGNE</strong>   
+        <br>
+        <img src="Images/sketch.jpg" width="60%" alt="">
+     
+        </div>
+    </div>
+  </div>
+
+ 
+<!-- porto containers -->
+<!-- portfolio -->
+<div class="portfolio">
+    <h2 class="text-center">Portfolio</h2>
+<div class="container">
+ <div class="row">
+  <div class="col-lg-4 col-md-4 col-sm-12">
+   <img src="#" class="img-fluid">
+  </div>
+  <div class="col-lg-4 col-md-4 col-sm-12">
+   <img src="images/portfolio/port1.png" class="img-fluid">
+  </div>
+  <div class="col-lg-4 col-md-4 col-sm-12">
+   <img src="images/portfolio/port6.png" class="img-fluid">
+  </div>
+<div class="col-lg-4 col-md-4 col-sm-12">
+   <img src="images/portfolio/port3.png" class="img-fluid">
+  </div>
+  <div class="col-lg-4 col-md-4 col-sm-12">
+   <img src="images/portfolio/port11.png" class="img-fluid">
+  </div>
+  <div class="col-lg-4 col-md-4 col-sm-12">
+   <img src="images/portfolio/electric.png" class="img-fluid">
+  </div>
+<div class="col-lg-4 col-md-4 col-sm-12">
+   <img src="images/portfolio/Classic.jpg" class="img-fluid">
+  </div>
+  <div class="col-lg-4 col-md-4 col-sm-12">
+   <img src="images/portfolio/port1.png" class="img-fluid">
+  </div>
+  <div class="col-lg-4 col-md-4 col-sm-12">
+   <img src="images/portfolio/port8.png" class="img-fluid">
+  </div>
+ </div>
+</div>
+</div>
 <!--main JQ  -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
