--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 
   <body> 
      <div id="header"></div>
+     <div id="homepage"></div>
      <div id="footer"></div>
 
 <script> 
       $(function(){
         $("#header").load("header.html"); 
         $("#footer").load("footer.html");
+        $("#homepage").load("homepage.html")
       });
       </script>      
   </body>  
