--- a/homepage.html
+++ b/homepage.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- scroll up -->
- 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    
+
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    
@@ -13,6 +14,9 @@
     <title>homepage</title>
 </head>
 <body>
+    <button id="btnScrollToTop">
+        <i class="material-icons">arrow_upward</i>
+      </button> 
     <div class="row">
         <div class="col-12 col-md-8" style="text-align: center;">
             <h1>Hi, there! Welcome to my portfolio.
@@ -101,24 +105,21 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <!-- scroll up -->
-<a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
-<script>
-    $(document).ready(function(){
-	$(window).scroll(function () {
-			if ($(this).scrollTop() > 50) {
-				$('#back-to-top').fadeIn();
-			} else {
-				$('#back-to-top').fadeOut();
-			}
-		});
-		// scroll body to 0px on click
-		$('#back-to-top').click(function () {
-			$('body,html').animate({
-				scrollTop: 0
-			}, 400);
-			return false;
-		});
-});
-</script>
+<script> 
+    const btnScrollToTop = $("#btnScrollToTop");
+    btnScrollToTop.hide();  
+
+    $(window).on('scroll', function() {
+        if ($(this).scrollTop() > 100) {
+            btnScrollToTop.fadeIn();
+        } else {
+            btnScrollToTop.fadeOut();
+        }
+        });
+  
+      btnScrollToTop.on('click', function(e) {
+              $("html, body").animate({scrollTop: 0}, 500);
+              });
+  </script> 
 </body>
 </html>
