--- a/homepage.html
+++ b/homepage.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- scroll up -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    
-
-    <!-- google font -->
+  <!-- google font -->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    
     <link href="homepage.css" rel="stylesheet">
     <title>homepage</title>
 </head>
 <body>
+  
+
+
     <button id="btnScrollToTop">
         <i class="material-icons">arrow_upward</i>
       </button> 
@@ -22,7 +24,7 @@
             <h1>Hi, there! Welcome to my portfolio.
                <br> I am Ariana Horn.
             </h1>
-            <p style="color: darkolivegreen; text-align: left; padding: 10px;"> - UX UI designer</p>
+            <p style="color: darkolivegreen; text-align: left; padding: 10px;"><strong></strong> - UX UI designer</strong></p>
         </div>
         <div class="col-6 col-md-4"></div>
       </div>    
@@ -55,7 +57,6 @@
   </div>
 
  
-<!-- porto containers -->
 <!-- portfolio -->
 <div class="portfolio">
     <h2 class="text-center">Portfolio</h2>
