--- a/index.html
+++ b/index.html
@@ -5,20 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>main</title>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  </head> 
-
-  <body> 
-     <div id="header"></div>
-     <div id="homepage"></div>
-     <div id="footer"></div>
-
-<script> 
-      $(function(){
-        $("#header").load("header.html"); 
-        $("#footer").load("footer.html");
-        $("#homepage").load("homepage.html")
-      });
-      </script>      
+    <title></title> 
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script> 
+    <script>  
+    $(function(){ 
+      $("#header").load("header.html");  
+      $("#footer").load("footer.html");  
+    }); 
+    </script>  
+    </head> 
+    <body> 
+    <div id="header"></div> 
+    <!--Remaining section--> 
+    <div id="footer"></div>     
   </body>  
 </html>
